complete register and login module

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,6 @@
 # 数据库连接信息
-DATABASE_URL=postgresql+psycopg://postgres:postgres@115.175.30.67:5432/homeledger
+# DATABASE_URL=postgresql+psycopg://postgres:test123@115.175.30.67:5432/homeledger
+DATABASE_URL=postgresql://homeledger_user:test123@115.175.30.67:5432/homeledger
 
 # JWT密钥
 SECRET_KEY=your-secret-key-here
