--- a/WeApp/project.config.json
+++ b/WeApp/project.config.json
@@ -33,5 +33,11 @@
   },
   "appid": "xxxxxxxx",
   "editorSetting": {},
-  "libVersion": "3.14.2"
+  "libVersion": "3.14.2",
+  "proxyTable": {
+    "/api": {
+      "target": "http://127.0.0.1:8000",
+      "changeOrigin": true
+    }
+  }
 }
